--- a/mlib.html
+++ b/mlib.html
@@ -57,6 +57,7 @@ mlib provides the following Common Lisp-like functions and macros:
     - [elt](#function-elt), [copy-seq](#function-copy-seq), [length](#function-length)
     - [reverse](#function-reverse), [nreverse](#function-nreverse)
     - [remove-if](#function-remove-if), [remove](#function-remove)
+    - [concatenate](#function-concatenate)
     - [map](#function-map), [map-into](#function-map-into), [reduce](#function-reduce)
 - hash tables
     - [gethash](#function-gethash), [remhash](#function-remhash), [maphash](#function-maphash)
@@ -74,6 +75,7 @@ functions and macros inspired by [Alexandria](https://alexandria.common-lisp.dev
 
 - conses and lists
     - [circular-list](#function-circular-list)
+    - [mappend](#function-mappend), [mappend-tails](#function-mappend-tails)
 - iteration
     - [doplist](#macro-doplist)
 - higher order
@@ -271,11 +273,11 @@ containing the `cdr`s of each such list.
 See also: [unzip](#function-unzip).
 
 ### Function: list-length
-    (list-length list-or-string) -> length
+    (list-length list) -> length
 
 Since: 1.1
 
-Returns the length of `list-or-string` if it is a string or proper list.
+Returns the length of `list` if it is a string or proper list.
 Returns `nil` if `list-or-string` is a circular list.
 
 ### Function: last
@@ -403,7 +405,7 @@ Since: 1.1
 `function` must accept as many arguments as lists are given,
 and will applied to subsequent items of the given lists.
 
-All function application results will be concatenated to a list
+All function application results will be concatenated (as if by nconc) to a list
 which is the return value of `mapcan`.
 
 ### Function: mapcon
@@ -414,8 +416,41 @@ Since: 1.1
 `function` must accept as many arguments as lists are given,
 and will applied to subsequent tails of the given lists.
 
-All function application results will be concatenated to a list
+All function application results will be concatenated (as if by nconc) to a list
 which is the return value of `mapcon`.
+
+### Function: mappend
+    (mappend function list+) -> appended-results
+
+Since: 1.4.7
+
+`function` must accept as many arguments as lists are given,
+and will applied to subsequent items of the given lists.
+
+All function application results will be concatenated to a list
+which is the return value of `mappend`.
+`function` must return a list which will not be mutated by `mappend`.
+
+`mappend` works similar to Alexandria's `mappend` and
+can be thought of as a non-destructive version of `mapcan`,
+i.e. `mappend` combines the results of applying `function`
+by the use of `append` rather than `nconc`.
+
+### Function: mappend-tails
+    (mappend-tails function list+) -> appended-results
+
+Since: 1.4.7
+
+`function` must accept as many arguments as lists are given,
+and will applied to subsequent tails of the given lists.
+
+All function application results will be concatenated to a list
+which is the return value of `mappend-tails`.
+`function` must return a list which will not be mutated by `mappend`.
+
+`mappend-tails` can be thought of as a non-destructive version of `mapcon`,
+i.e. `mappend-tails` combines the results of applying `function`
+by the use of `append` rather than `nconc`.
 
 ### Macro: multiple-value-list
 
@@ -875,6 +910,18 @@ Since: 1.1
 
 Return a fresh sequence without occurrences of `elem`.
 An occurrence is determined by `eql`.
+
+### Function: concatenate
+    (concatenate result-type sequences*) -> result-sequence
+
+Since 1.4.7
+
+`concatenate` returns a sequence that contains all the individual elements
+of all the sequences in the order that they are supplied.
+The sequence is of type result-type, which must be a subtype of type sequence.
+
+All of the sequences are copied from; the result does not share any structure
+with any of the sequences.
 
 ### Function: map
     (map result-type function sequences+) -> result
