--- a/mlib.html
+++ b/mlib.html
@@ -47,7 +47,8 @@ mlib provides the following Common Lisp-like functions and macros:
 - places
     - [destructuring-bind](#macro-destructuring-bind)
     - [get-setf-expansion](#function-get-setf-expansion)
-    - [setf](#macro-setf), [psetf](#macro-psetf), [incf, decf](#macro-incf-decf)
+    - [setf](#macro-setf), [psetf](#macro-psetf), [shiftf](#macro-shiftf), [rotatef](#macro-rotatef)
+    - [incf, decf](#macro-incf-decf)
     - [push](#macro-push), [pop](#macro-pop), [pushnew](#macro-pushnew)
 - numbers, characters
     - [abs](#function-abs), [min](#function-min), [max](#function-max), [zerop](#function-zerop), [evenp](#function-evenp), [oddp](#function-oddp)
@@ -446,7 +447,7 @@ and will applied to subsequent tails of the given lists.
 
 All function application results will be concatenated to a list
 which is the return value of `mappend-tails`.
-`function` must return a list which will not be mutated by `mappend`.
+`function` must return a list which will not be mutated by `mappend-tails`.
 
 `mappend-tails` can be thought of as a non-destructive version of `mapcon`,
 i.e. `mappend-tails` combines the results of applying `function`
@@ -637,7 +638,7 @@ knows a corresponding setting form, which currently are:
 - values
 
 ### Macro: psetf
-    (psetf pair*) -> result
+    (psetf pair*) -> nil
 
 Since: 1.4.6
 
@@ -646,9 +647,29 @@ is the value that is supposed to go into that place.
 
 If more than one pair is supplied then the assignments of new values to places are done in parallel.
 
-Similar to CL's `psetf` except: Murmel's `psetf`'s return value is the multiple-values
-returned by the storing form for the last place, or nil if there are no pairs,
-similar to `setf`.
+Similar to CL's `psetf`.
+
+### Macro: shiftf
+    (shiftf place+ newvalue) -> old-values-1
+
+Since: 1.4.8
+
+`shiftf` modifies the values of each place by storing newvalue into the last place,
+and shifting the values of the second through the last place into the remaining places.
+
+Similar to CL's `shiftf`.
+
+### Macro: rotatef
+    (rotatef place*) -> nil
+
+Since: 1.4.8
+
+`rotatef` modifies the values of each place by rotating values from one place into another.
+
+If a place produces more values than there are store variables, the extra values are ignored.
+If a place produces fewer values than there are store variables, the missing values are set to `nil`.
+
+Similar to CL's `rotatef`.
 
 ### Macro: incf, decf
     (incf place delta-form*) -> new-value
